--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -8,6 +8,24 @@
 }
 
 .content {
-    margin-left: 20%;
-    height: 100%;
+    padding-left: 5rem;
+    padding-top: 1.2rem;
+    height: fit-content;
+    width: 100%;
+}
+
+nav {
+    height: 4rem;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+}
+
+.title {    
+    color: #fdcae1;
+    margin: 0 auto;
+    text-align: center;
+    font: italic bold 50px Georgia, Serif;
+    text-shadow: -4px 3px 0 #84b6f4, -14px 7px 0 #fdfd96;
 }
