--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -8,10 +8,10 @@
 }
 
 .content {
-    padding-left: 5rem;
     padding-top: 1.2rem;
     height: fit-content;
     width: 100%;
+    overflow-x: hidden;
 }
 
 nav {
