--- a/src/components/ventas/ventas.css
+++ b/src/components/ventas/ventas.css
@@ -35,7 +35,8 @@
 .cell-content {
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    max-width: 100px;
 }
 
 .icon {
