--- a/src/components/ventas/ventas.css
+++ b/src/components/ventas/ventas.css
@@ -69,3 +69,23 @@
 .button-option {
     height: 5rem;
 }
+
+/* modal sales */
+.card-item {
+    height: 90%;
+    cursor: pointer;
+    max-width: 145px;
+}
+
+.card-mobile {
+    margin: 12px;
+}
+
+.card-desktop {
+    margin: 16px;
+}
+
+.card-content {
+    padding-top: 0px;
+    padding-bottom: 10px;
+}
