--- a/src/components/ventas/ventas.css
+++ b/src/components/ventas/ventas.css
@@ -89,3 +89,12 @@
     padding-top: 0px;
     padding-bottom: 10px;
 }
+
+.box-container {
+    background-color: #53ca98;
+    height: 85vh;
+    margin-top: 4rem;
+    width: 100%;
+    overflow-y: scroll;
+    border-radius: 10px;
+}
